--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ As a quick learner and a problem solver, I am ready to tackle challenges and ada
                 <li>Occupation: Student</li>
                 <li>
                   Portfolio: 
-                  <a href="http://www.google.com"
+                  <a href="https://revanth045.github.io/revanth_portfolio/"
                   target="_blank" 
                   rel="noopener noreferrer"
                   class="text-decoration-none">Click Here for Portfolio</a> 
